crates/busx/tests/snapshots/tui_pty__call_zero_arg_method.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
org.busx.Test > /org/busx/Test > org.busx.Test > Result
┌org.busx.Test.MakeFd──────────────────────────────────────────────────────────┐
│<fd /dev/null ro>                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ scroll · ←→ scroll · c copy-as · y copy · Esc back · q quit · ? help
