crates/busx/tests/snapshots/tui_pty__copied_status_call_busctl.snap
---
source: crates/busx/tests/tui_pty.rs
expression: cropped.as_str()
---
copy as — ↑↓ choose · Enter copy · Esc────────────────────────────────────────
dbus-send: (unsupported)
busctl: busctl --address=<SOCKET>
qdbus: (unsupported)
gdbus: gdbus call --address=<SOCKET>
busx: busx --address=<SOCKET>
busctl --address=<SOCKET>





copied
