crates/busx/tests/snapshots/tui_pty__copied_status_listen_busctl.snap
---
source: crates/busx/tests/tui_pty.rs
expression: cropped.as_str()
---
copy as — ↑↓ choose · Enter copy · Esc────────────────────────────────────────
dbus-monitor --address <SOCKET>
busctl --address=<SOCKET>
qdbus: (unsupported)
gdbus monitor --address=<SOCKET>
busx --address=<SOCKET>
busctl --address=<SOCKET>





copied
