crates/busx/tests/snapshots/tui_pty__copy_as_call_busctl.snap
---
source: crates/busx/tests/tui_pty.rs
expression: clip.contents()
---
busctl --address=<SOCKET> call org.busx.Test /org/busx/Test org.busx.Test TakeHints a{sv}
