crates/busx/tests/snapshots/tui_pty__copy_as_popup_listen_busctl.snap
---
source: crates/busx/tests/tui_pty.rs
expression: cropped.as_str()
---
copy as — ↑↓ choose · Enter copy · Esc────────────────────────────────────────
dbus-send: dbus-monitor --address <SOCKET>
busctl: busctl --address=<SOCKET>
qdbus: (unsupported)
gdbus: gdbus monitor --address=<SOCKET>
busx: busx --address=<SOCKET>
dbus-monitor --address <SOCKET>
