crates/busx/tests/snapshots/tui_pty__copy_as_popup_on_interface.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
          ┌copy as — ↑↓ choose · Enter copy · Esc────────────────────────────────────────┐
          │dbus-send: (unsupported)                                                      │
          │busctl: busctl --address=<SOCKET>
          │qdbus: (unsupported)                                                          │
          │gdbus: gdbus call --address=<SOCKET>
          │dbus-send cannot express this operation.                                      │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          └──────────────────────────────────────────────────────────────────────────────┘
